2011-02-24  Araki Ken  <arakiken@users.sf.net>

	* x_imagelib.c: "/" is appended to LIBMDIR in kik_dl_open().
	    (Thanks to Iwamoto Kouichi san)

	* configure.in: If gdk-pixbuf is linked to mlterm, DLOPEN_LIBM
	  and LIBMDIR macros are never defined.

2011-02-23  Araki Ken  <arakiken@users.sf.net>

	* libtool: version down to 1.5.26

	* x_window.c: x_decsp_font_draw_string() is used instead of
	  x_decsp_draw_image_string() in x_window_draw_decsp_string().
	  (Thanks to Iwamoto Kouichi san)

	* vte.c: Returned value of gdk_screen_get_resolution() is used for DPI
	  of xft font.
	
	* x_font.c: x_font_set_dpi_for_xft() is added.

2011-02-23  Araki Ken  <arakiken@users.sf.net>

	* configure.in, Makefile.in: @DL_LIBS_SB@ is removed from gtk/Makefile.in
	  in order to avoid --version-script=\$(top_srcdir)/xwindow/dexport.map
	  option in building libvte library.

	* version.h.in: 3.0.2 post -> 3.0.3 pre

2011-02-21  Araki Ken  <arakiken@users.sf.net>

	* xwindow/Makefile.in: $(LMLTERM) is moved before $(LMKF) in LIBS1.
	  (This bug causes link error in win32.)

	* configure, aclocal.m4, ltmain.sh: Updated to libtool 2.2.6b.

	* configure.in: 'nm -D libm.so' is used instead of 'objdump -T libm.so'.

2011-02-19  Araki Ken  <arakiken@users.sf.net>

	* kik_debug.c: Wrong modification in 2011-02-08 is fixed.

	* configure.in, xwindow/Makefile.in:
	  - Check if libm is possible to dlopen by 'objdump -T libm.so'.
	  - SYSLIBDIR => LIBMDIR
	  - MATH_CFLAGS and MATH_LIBS are added.

	* x_display.c: x_display_get_visual_info() is added.

	* x_imagelib.c, mlimgloader/main.c: code clean up.

2011-02-18  Araki Ken  <arakiken@users.sf.net>

	* pixmap_engine.c: Common pixmaps are shared by multiple scrollbar views.

2011-02-16  Araki Ken  <arakiken@users.sf.net>

	* x_imagelib.c: Fixed create_cardinals_from_image().

2011-02-13  Araki Ken  <arakiken@users.sf.net>

	* README, doc/ja/README.ja: Updated.

	* tool/mlimgloader/main.c, Makefile.in: Added.